# qwen-synthetic-augmentation

./: .gitignore  Dockerfile  QEval.md  README.md  demo.ipynb  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-uv.yml
examples/: input.csv
qwenaug/: augmentation.py  model.py
src/qwenaug/: augmentation.py
synthetic-augmentation/: augmentation.py  model.py
